--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-query": "^5.83.0",
     "antd": "^5.26.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
